modified home page

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,7 +5,9 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to Razor Sharp Pizzas</h1>
+    <h2>Razor Sharp Pizzas, is the pizza for you and me!</h2>
     <img class="mainImage" src="~/images/PizzaTime.jpg" />
+    <br />
+    <h2><a class="nav-link text-dark" asp-area="" asp-page="Checkout/ThankYou">Order a Pizza</a></h2>
 </div>
