--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,9 +5,11 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to Razor Sharp Pizzas</h1>
-    <h2>Razor Sharp Pizzas, is the pizza for you and me!</h2>
+    <div class="mainText">
+        <h1 class="display-4 capitalize-text text-black">Welcome to Razor Sharp Pizzas</h1>
+        <h2 class="mainSubTitle">Razor Sharp Pizzas, is the pizza for you and me!</h2>
+    </div>
     <img class="mainImage" src="~/images/PizzaTime.jpg" />
     <br />
-    <h2><a class="nav-link text-dark" asp-area="" asp-page="Checkout/ThankYou">Order a Pizza</a></h2>
+    <h2><a class="btn btn-primary mt-1" asp-area="" asp-page="Checkout/ThankYou">ORDER A PIZZA</a></h2>
 </div>
